--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   
       <mat-divider></mat-divider>
   
-      <button mat-button class="menu-button" routerLink="/home">
+      <button mat-button class="menu-button" routerLink="/area">
         <mat-icon>home</mat-icon>
         <span>Home</span>
       </button>
